# Bounce_simple

./: .gitignore  Cargo.toml  pq_plot.py  pyproject.toml
ml/: mlp_sho.ipynb  rnn_sho.ipynb
note/: Potential.ipynb  SHO.ipynb
src/: main.rs
