[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bounce_simple"
version = "0.0.1"
description = ""
dependencies = [
    "notebook ==7.0.6",
    "torch ==2.1.2",
    "lightning ==2.1.3",
    "matplotlib ==3.8.2",
    "numpy ==1.26.3",
    "rich ==13.7.0",
    "pandas ==2.1.4",
    "pyarrow ==14.0.2",
]
